Organize html my site 1.006

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ function closebutton(){if(history.length===1){window.location="http://www.svz.io
 <div class="contact-grid">
 <div id="w-node-_8d3ecaa6-7def-52dd-c0cd-cad9360ae0a0-360ae099" class="border-block scott">
 <div class="div-block-4">
-<img src="file://wsl.localhost/Ubuntu/home/marcilio_s/great_projects/www.marcilio.io/image_black.png" class="image-2"/>
+<img src="./image_black.png" class="image-2"/>
 <div class="spacer-2em">
 </div>
 <h2 class="no-margin">Discovery Call</h2>
